--- a/james-connors-website/src/index.css
+++ b/james-connors-website/src/index.css
@@ -24,6 +24,15 @@
   border: #464866;
 }
 
+.projectBox{
+  background-color: rgba(21, 23, 61, 0.90);
+  padding: 2%;
+}
+
+.darkBox {
+  background-color: rgba(21, 23, 61, 0.90);
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -52,7 +61,7 @@ input.navButton + label {
 input.navButton + p.navLabel {
   background-color: transparent;
   border-left:5px solid #464866;
-  padding: 10px;
+  padding: 12px;
 }
 
 input.navButton + p.navLabel:hover {
@@ -61,13 +70,11 @@ input.navButton + p.navLabel:hover {
 
 input.navButton:checked + label {
   color: #2E9CCA;
-  padding: 10px;
   border: none;
 }
 
 input.navButton:checked + p.navLabel {
   color: #2E9CCA;
-  padding: 10px;
   border-left:5px solid #2E9CCA;
   background-color: #464866;
 }
@@ -77,7 +84,8 @@ input.navButton:checked + p.navLabel {
 }
 
 .experienceBox{
-  height: 15em;
+  height: 100%;
+  overflow:auto;
 }
 
 .navButton:hover{
@@ -103,4 +111,23 @@ input.navButton:checked + p.navLabel {
 .linkImage {
   width: 25px;
   height:25px;
+}
+
+.inlineLinkImage {
+  width: 19px;
+  height:19px;
+  margin-left:10px;
+}
+.inlineLinkImage:hover{
+  color:#2E9CCA
+}
+.projectLink {
+  color:#2E9CCA;
+  text-decoration:none;
+}
+.projectLink:hover {
+  color:#29648A
+}
+.projectImage {
+  
 }
