finished contact form, also added a bunch of UI changes to clean up the site overall

--- a/james-connors-website/src/index.css
+++ b/james-connors-website/src/index.css
@@ -201,3 +201,10 @@ a:link { text-decoration: none; }
   background-color: #2E9CCA;
   color:#25274D;
 }
+.contactBox{
+  max-width: 500px
+}
+.sectionTitle{
+  border-bottom:#464866 4px solid;
+  padding-bottom:1%
+}
